docs: redesign README with feature highlights and cleaner layout