@@ -1,47 +1,57 @@
-# openvox-operator
+# 🦊 openvox-operator
 
-A Kubernetes Operator for running OpenVox Server environments on Kubernetes and OpenShift. Manages the full lifecycle: CA initialization, certificate distribution, compiler scaling, and PuppetDB integration.
+A Kubernetes Operator for running [OpenVox Server](https://github.com/OpenVoxProject) environments on **Kubernetes** and **OpenShift**.
 
-The container images are rootless, built on UBI9 without ezbake, and work with OpenShift's random UID assignment out of the box.
+<table>
+<tr>
+<td>🔐</td><td><b>Automated CA Lifecycle</b><br/>CA initialization, certificate signing and distribution — fully managed</td>
+<td>📦</td><td><b>One Image, Two Roles</b><br/>Same rootless image runs as CA server or compiler, configured by the operator</td>
+</tr>
+<tr>
+<td>⚡</td><td><b>Scalable Compilers</b><br/>Scale catalog compilation horizontally with Deployments and HPA</td>
+<td>🔒</td><td><b>Rootless & OpenShift Ready</b><br/>Random UID compatible, no root, no ezbake, no privilege escalation</td>
+</tr>
+<tr>
+<td>☸️</td><td><b>Kubernetes-Native Config</b><br/>All configuration via ConfigMaps and Secrets — no entrypoint scripts</td>
+<td>🗄️</td><td><b>PuppetDB Integration</b><br/>Connect to external PuppetDB for reports, facts and exported resources</td>
+</tr>
+</table>
 
 ## Architecture
 
-> Detailed diagrams: [docs/architecture.md](docs/architecture.md) | [draw.io](docs/architecture.drawio)
-
 ```mermaid
 graph LR
-    Operator[Operator]
+    Operator["☸️ Operator"]
 
     Operator -->|manages| CA
     Operator -->|manages| Compiler1
     Operator -->|manages| CompilerN
 
-    subgraph puppetservers [" "]
-        CA["Puppetserver<br/><b>CA Role</b><br/><small>StatefulSet · replicas: 1</small>"]
-        Compiler1["Puppetserver<br/><b>Compiler</b><br/><small>Deployment · replica 1</small>"]
-        CompilerN["Puppetserver<br/><b>Compiler</b><br/><small>Deployment · replica N</small>"]
+    subgraph puppetservers ["Puppetserver Instances — same image, different role"]
+        CA["🔐 Puppetserver<br/><b>CA Role</b><br/>StatefulSet · 1 replica · PVC"]
+        Compiler1["⚡ Puppetserver<br/><b>Compiler</b><br/>Deployment · replica 1"]
+        CompilerN["⚡ Puppetserver<br/><b>Compiler</b><br/>Deployment · replica N"]
     end
 
-    Compiler1 -->|sign certs| CA
-    CompilerN -->|sign certs| CA
+    Compiler1 -->|cert signing| CA
+    CompilerN -->|cert signing| CA
 
-    Agents["Puppet Agents"] -->|catalog + report| Compiler1
-    Agents -->|catalog + report| CompilerN
+    Agents["🖥️ Puppet Agents"] -->|catalog &<br/>report| Compiler1
+    Agents -->|catalog &<br/>report| CompilerN
 
-    Compiler1 -->|store| PuppetDB[(PuppetDB)]
-    CompilerN -->|store| PuppetDB
+    Compiler1 -->|facts &<br/>reports| PuppetDB[("🗄️ PuppetDB")]
+    CompilerN -->|facts &<br/>reports| PuppetDB
 ```
 
-All Puppetserver instances use the **same container image**. The Operator assigns the role (CA or Compiler) via ConfigMap and service configuration. The CA runs as a StatefulSet (exactly 1 replica with persistent storage), compilers run as a scalable Deployment.
+The Operator watches `OpenVoxServer` custom resources and manages the full lifecycle:
 
-### Design Principles
+1. **Generates ConfigMaps** from the CR spec (puppet.conf, puppetdb.conf, webserver.conf)
+2. **Initializes the CA** via a one-time Job (`puppetserver ca setup`)
+3. **Runs the CA server** as a StatefulSet (replicas: 1, persistent CA data)
+4. **Deploys compilers** as a scalable Deployment (replicas: 1–N)
+5. **Bootstraps SSL** — compilers obtain certificates from the CA server automatically
 
-- **Kubernetes-first**: All configuration via ConfigMaps/Secrets, no ENV-var-to-config translation scripts
-- **No ezbake**: Direct JVM startup, no `runuser`/`su`/`sudo`, no init scripts
-- **No Docker-Compose support**: Use `kind` or `minikube` for local testing with the same K8s manifests
-- **Rootless**: OpenShift random UID compatible (`USER 1001:0`, `chgrp 0`, `chmod g=u`, SGID)
-- **No System Ruby for config**: The entrypoint.d scripts that called `puppet config set/print` are replaced by operator-generated ConfigMaps
-- **Split CA / Compiler**: CA runs as StatefulSet (replicas: 1), compilers as scalable Deployment
+> 📐 Detailed architecture: [docs/architecture.md](docs/architecture.md) · [docs/design.md](docs/design.md) · [architecture.drawio](docs/architecture.drawio)
 
 ## Quick Start
 
@@ -55,33 +65,24 @@ podman build -t openvoxserver:rootless .
 ### Deploy with the Operator
 
 ```bash
-# Install CRD
-kubectl apply -f config/crd/bases/
-
-# Deploy the operator
-kubectl apply -f config/manager/
-
-# Create an OpenVox environment
+kubectl apply -f config/crd/bases/            # Install CRD
+kubectl apply -f config/manager/              # Deploy operator
 kubectl apply -f config/samples/openvox_v1alpha1_openvoxserver.yaml
 ```
 
-### Deploy with Plain Manifests
+### Deploy with Plain Manifests (no operator)
 
 ```bash
 kubectl apply -f examples/kubernetes/
-kubectl wait --for=condition=ready pod -l app.kubernetes.io/name=openvoxserver --timeout=300s
 ```
 
-## Custom Resource Definition
-
-The operator manages `OpenVoxServer` custom resources:
+## Custom Resource
 
 ```yaml
 apiVersion: openvox.voxpupuli.org/v1alpha1
 kind: OpenVoxServer
 metadata:
   name: production
-  namespace: openvox
 spec:
   image:
     repository: ghcr.io/slauger/openvoxserver
@@ -90,147 +91,87 @@ spec:
   ca:
     enabled: true
     autosign: "true"
-    ttl: 157680000
-    allowSubjectAltNames: true
     certname: "puppet"
-    dnsAltNames:
-      - puppet
-      - puppet-ca
-      - puppet-ca.openvox.svc
-    storage:
-      size: 1Gi
-    resources:
-      requests: { memory: "1Gi", cpu: "500m" }
-      limits:   { memory: "2Gi", cpu: "1500m" }
+    dnsAltNames: [puppet, puppet-ca]
+    storage: { size: 1Gi }
     javaArgs: "-Xms512m -Xmx1024m"
 
   compilers:
     replicas: 2
-    dnsAltNames:
-      - puppet
-      - puppet.openvox.svc
-    resources:
-      requests: { memory: "1Gi", cpu: "500m" }
-      limits:   { memory: "2Gi", cpu: "1500m" }
     javaArgs: "-Xms512m -Xmx1024m"
     maxActiveInstances: 2
 
-  puppet:
-    serverPort: 8140
-    environmentPath: /etc/puppetlabs/code/environments
-    environmentTimeout: unlimited
-    hieraConfig: "$confdir/hiera.yaml"
-    storeconfigs: true
-    storeBackend: puppetdb
-    reports: puppetdb
-
   puppetdb:
     enabled: true
-    serverUrls:
-      - https://openvoxdb:8081
+    serverUrls: ["https://openvoxdb:8081"]
 
   code:
-    volume:
-      size: 5Gi
+    volume: { size: 5Gi }
 ```
 
-### Status
-
-```bash
+```
 $ kubectl get openvoxserver
 NAME         PHASE     CA READY   COMPILERS   AGE
 production   Running   true       2           5m
 ```
 
-## Reconciliation Flow
-
-1. Operator reads `OpenVoxServer` CR
-2. Generates ConfigMaps from `spec.puppet.*` (puppet.conf, puppetdb.conf, webserver.conf, etc.)
-3. If `ca.enabled` and no CA Secret exists: creates CA Setup Job (`puppetserver ca setup`)
-4. Waits for Job completion, CA certificates are stored in a Secret
-5. Creates CA StatefulSet (replicas: 1, PVC for CA data)
-6. Waits for CA readiness
-7. Creates Compiler Deployment (replicas: N, CA Secret mounted)
-8. Compilers bootstrap SSL via `puppet ssl bootstrap` against the CA Service
-
 ## Container Image
 
-The image is intentionally slim for Kubernetes deployments:
+The image is **Kubernetes-first** — intentionally slim, no Docker-Compose support.
 
-### Included
+| ✅ Included | ❌ Removed (vs. upstream) |
+|---|---|
+| UBI9 + JDK 17 | entrypoint.d scripts |
+| OpenVox Server tarball | System Ruby / Gemfile / bundle install |
+| PuppetDB termini | ENV→config translation logic |
+| JRuby openvox gem | gcc / make / ruby-devel |
+| OpenShift random-UID pattern | Docker-Compose support |
+| openvoxserver-ca rootless patches | |
 
-- UBI9 base + JDK 17
-- OpenVox Server tarball (puppet-server-release.jar, CLI tools, vendored JRuby gems)
-- PuppetDB termini
-- `puppetserver gem install openvox` (JRuby)
-- openvoxserver-ca patches (chown/symlink disabled for rootless)
-- OpenShift random-UID pattern
-
-### Removed (compared to upstream container-openvoxserver)
-
-- All entrypoint.d scripts (config comes via ConfigMap)
-- System Ruby openvox gem (no `puppet config set/print`)
-- Gemfile / bundle install / ruby-devel / gcc / make
-- ENV-var to config translation logic
-- Docker-Compose support
-
-### Entrypoint
+**Entrypoint** — direct JVM, nothing else:
 
 ```bash
 exec java ${JAVA_ARGS} \
-    --add-opens java.base/sun.nio.ch=ALL-UNNAMED \
-    --add-opens java.base/java.io=ALL-UNNAMED \
     -Dlogappender=STDOUT \
     -cp "${INSTALL_DIR}/puppet-server-release.jar" \
     clojure.main -m puppetlabs.trapperkeeper.main \
-    --config "${CONFIG}" \
-    --bootstrap-config "${BOOTSTRAP_CONFIG}"
+    --config "${CONFIG}" --bootstrap-config "${BOOTSTRAP_CONFIG}"
 ```
+
+Local testing: use `kind` or `minikube` with the same K8s manifests.
 
 ## Project Structure
 
 ```
 openvox-operator/
-├── images/
-│   └── openvoxserver/
-│       ├── Containerfile            # Rootless K8s-first image (UBI9)
-│       ├── entrypoint.sh            # Minimal entrypoint (direct java)
-│       └── healthcheck.sh
-├── api/
-│   └── v1alpha1/
-│       ├── groupversion_info.go
-│       ├── openvoxserver_types.go   # CRD type definitions
-│       └── zz_generated.deepcopy.go
-├── cmd/
-│   └── main.go                      # Operator entrypoint
-├── internal/
-│   └── controller/
-│       ├── openvoxserver_controller.go  # Main reconciliation loop
-│       ├── configmap.go             # ConfigMap generation
-│       ├── ca.go                    # CA Job/StatefulSet/Service
-│       └── compiler.go             # Compiler Deployment/Service
+├── images/openvoxserver/          # 🐳 Rootless K8s-first container image (UBI9)
+│   ├── Containerfile
+│   ├── entrypoint.sh              #    Direct java — no entrypoint.d
+│   └── healthcheck.sh
+├── api/v1alpha1/                  # 📋 CRD type definitions
+├── cmd/main.go                    # 🚀 Operator entrypoint
+├── internal/controller/           # ⚙️  Reconciliation logic
+│   ├── openvoxserver_controller.go
+│   ├── configmap.go               #    ConfigMap generation
+│   ├── ca.go                      #    CA Job / StatefulSet / Service
+│   └── compiler.go                #    Compiler Deployment / Service
 ├── config/
-│   ├── crd/bases/                   # Generated CRD manifests
-│   ├── rbac/                        # RBAC roles
-│   ├── manager/                     # Operator deployment
-│   └── samples/                     # Example CRs
-├── examples/
-│   └── kubernetes/                  # Plain K8s manifests (no operator)
-├── docs/
-│   └── architecture.drawio          # Architecture diagram
+│   ├── crd/bases/                 #    CRD manifests
+│   ├── rbac/                      #    RBAC roles
+│   └── samples/                   #    Example CRs
+├── docs/                          # 📐 Architecture & design docs
 ├── go.mod
-├── LICENSE                          # Apache 2.0
-└── README.md
+└── LICENSE                        #    Apache 2.0
 ```
 
 ## Roadmap
 
-- [x] Rootless OpenVox Server container image (UBI9, tarball-based)
-- [x] Kubernetes Operator scaffolding (CRD, controller, reconciliation loop)
+- [x] Rootless OpenVox Server container image (UBI9, tarball-based, no ezbake)
+- [x] Operator scaffolding (CRD types, controller, reconciliation loop)
 - [ ] Simplify container image (remove entrypoint.d, Gemfile, System Ruby)
 - [ ] CRD manifest generation and RBAC
-- [ ] r10k integration (initContainer / CronJob)
-- [ ] HPA for compilers
+- [ ] r10k code deployment (Job / CronJob with shared PVC)
+- [ ] HPA for compiler autoscaling
 - [ ] cert-manager intermediate CA support
 - [ ] OLM bundle for OpenShift
 - [ ] Rootless OpenVox DB container image
